force-app/main/default/objects/ASF_Work_Item__c/ASF_Work_Item__c.object-meta.xml
<CustomObject>
    <label>Work Item</label>
    <nameField>
        <label>Work Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>