force-app/main/default/objects/ASF_Work_Item__c/fields/Assigned_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Queue__c</fullName>
    <label>Assigned Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>