force-app/main/default/objects/ASF_Work_Item__c/fields/Case_Rule__c.field-meta.xml
<CustomField>
    <fullName>Case_Rule__c</fullName>
    <label>Case Rule</label>
    <referenceTo>ASF_Case_Rule__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>