force-app/main/default/objects/ASF_Work_Item__c/fields/Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>Completion_Time__c</fullName>
    <label>Completion Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>