force-app/main/default/objects/ASF_Work_Item__c/fields/Task_Title__c.field-meta.xml
<CustomField>
    <fullName>Task_Title__c</fullName>
    <label>Task Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>