force-app/main/default/objects/ASF_Work_Item__c/fields/Work_Item_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Work Item External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>